--- a/app/components/Battle.css
+++ b/app/components/Battle.css
@@ -1,6 +1,5 @@
 /* Battle.css */
 .battle-container {
-  display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: #ecf0f1;
@@ -8,8 +7,13 @@
   border-radius: 10px;
   border: 2px solid #3498db;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
 }
-
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .card {
   display: flex;
   flex-direction: column;
@@ -17,7 +21,7 @@
   background-color: #f4f4f4;
   padding: 15px;
   border-radius: 10px;
-  width: 35%;
+  width: 45%;
   border: 2px solid #ccc;
   font-family: "Roboto", sans-serif;
 }
